force-app/main/default/objects/Incentive_Program__c/Incentive_Program__c.object-meta.xml
<CustomObject>
    <description>Incentive Program detail description.</description>
    <label>Incentive Program</label>
    <nameField>
        <label>Incentive Program Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Incentive Programs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>