force-app/main/default/objects/Incentive_Program__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Describes either incentive program is available for the enrollment or not.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>