force-app/main/default/objects/Incentive_Program__c/fields/Incentive_Summary__c.field-meta.xml
<CustomField>
    <fullName>Incentive_Summary__c</fullName>
    <description>Summary of Incentive Program.</description>
    <inlineHelpText>Summary of Incentive Program.</inlineHelpText>
    <label>Incentive Summary</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>