force-app/main/default/objects/Incentive_Program__c/fields/Partner_Industry__c.field-meta.xml
<CustomField>
    <fullName>Partner_Industry__c</fullName>
    <description>Allowed Line of Business for the incentive program.</description>
    <inlineHelpText>Allowed Line of Business for the incentive program.</inlineHelpText>
    <label>Allowed Partner Industry</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FINANCIAL</fullName>
            </value>
            <value>
                <fullName>HOSPITALITY</fullName>
            </value>
            <value>
                <fullName>RETAIL</fullName>
            </value>
            <value>
                <fullName>T&amp;T</fullName>
            </value>
            <value>
                <fullName>TRAVEL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>