force-app/main/default/objects/Incentive_Program__c/fields/Partner_Levels__c.field-meta.xml
<CustomField>
    <fullName>Partner_Levels__c</fullName>
    <description>Partner levels which are allowed to the incentive program.</description>
    <inlineHelpText>Partner levels which are allowed to the incentive program.</inlineHelpText>
    <label>Partner Levels</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Elite</fullName>
            </value>
            <value>
                <fullName>Advanced</fullName>
            </value>
            <value>
                <fullName>Authorized</fullName>
            </value>
            <value>
                <fullName>Premier</fullName>
            </value>
            <value>
                <fullName>Registered</fullName>
            </value>
            <value>
                <fullName>No Program Level</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>