force-app/main/default/objects/Incentive_Program__c/fields/Passed_Date__c.field-meta.xml
<CustomField>
    <fullName>Passed_Date__c</fullName>
    <description>Last date of Incentive Program Enrollment.</description>
    <inlineHelpText>Last date of Incentive Program Enrollment.</inlineHelpText>
    <label>Passed Date</label>
    <type>Date</type>
</CustomField>