force-app/main/default/objects/Incentive_Program__c/fields/Program_Type__c.field-meta.xml
<CustomField>
    <fullName>Program_Type__c</fullName>
    <description>Type of incentive program.</description>
    <label>Program Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Quarterly Sales Incentive</fullName>
            </value>
            <value>
                <fullName>Annual Quota Incentive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>