force-app/main/default/objects/Incentive_Program__c/fields/Terms_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Terms_Conditions__c</fullName>
    <description>Terms &amp; Conditions of Incentive Program.</description>
    <inlineHelpText>Terms &amp; Conditions of Incentive Program.</inlineHelpText>
    <label>Terms &amp; Conditions</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>